kubernetes-deploy-nodejs-test.yml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-test
  labels:
    app: nodejs-test
spec:
  type: NodePort
  ports:
    - name: http
      port: 3100
      targetPort: 3000
      protocol: TCP
      nodePort: 30000
  selector:
    app: nodejs-test
---
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: nodejs-test-nginx-ingress
    labels:
      app: nodejs-test
    annotations:
      kubernetes.io/ingress.class: "nginx"
      nginx.ingress.kubernetes.io/rewrite-target: /$1
  spec:
    rules:
      - host: nodejs-test.local
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nodejs-test
                  port:
                    number: 3100
